MVP plus stretch - fixed nav

--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,8 @@ p {
   width: 100%;
   height: 100px;
   background: #F6F6F6;
+  position: sticky;
+  top: 0;
 }
 .main-navigation .nav-container {
   height: 100%;
