--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,8 @@
     width: 100%;
     height: 100px;
     background: @nav-bg;
-    // position: fixed;    
+    position: sticky;
+    top: 0;    
   
     .nav-container {
       height: 100%;
